--- a/Public/buddhavipassana-2/css/style.css
+++ b/Public/buddhavipassana-2/css/style.css
@@ -672,7 +672,7 @@ footer p:nth-child(4){
 .team_wrap .position {margin-bottom: 0; font-weight: 500; font-style: italic;}
 .team_wrap label{margin-bottom: 0; display: block; font-weight: 600; font-style: italic;
                       font-size: 20px;}
-.team_wrap .info_wrap p {font-weight: 500;line-height: normal;}
+.team_wrap .info_wrap p {font-weight: 500;line-height: normal;margin-bottom: 20px;}
 .team_wrap  h3{
   font-size: 32px;
   color: #d9e1e8; 
