--- a/Public/owpg-main/css/style.css
+++ b/Public/owpg-main/css/style.css
@@ -212,6 +212,7 @@ header {
     flex-wrap: wrap;
     -ms-flex-line-pack: center;
     align-content: center;
+    display: none;
 }
 
 header ul {
@@ -605,7 +606,9 @@ section:nth-child(2) a span {
 
 /* Values Section [ Section 3 ]
  ========================================= */
-
+section:nth-child(3){
+  display: none;
+}
 section:nth-child(3),
 footer {
   background-color: transparent;
@@ -760,6 +763,7 @@ section:nth-child(4) h2 {
 
 section:nth-child(4) {
   padding-left: 100px;
+  display: none;
 }
 
 
