--- a/Public/owpg-main/css/style.css
+++ b/Public/owpg-main/css/style.css
@@ -994,7 +994,7 @@ footer p:nth-child(4) {
     left: 20px;
     max-width: 110px;
   }
-  nav div {
+  nav > div {
     background: #e4eaef;
     padding: 30px 0 30px 25px;
     display: none;
